[project]
name = "highway-testing"
version = "0.1.0"
description = "Testing pre-trained RL agents in HighwayEnv with search-based scenario generation"
authors = [{ name = "Course Staff" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "gymnasium==1.0.0",
    "highway_env==1.10.1",
    "numpy==1.26.4",
    "matplotlib==3.10.6",
    "torch>=2.2.2",
    "stable_baselines3==2.4.1",
    "tqdm==4.67.1",
    "moviepy==2.1.2",
]

[tool.uv]
# No special configuration required; `uv sync` will create .venv and install deps